# logly

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EXAMPLE_TIME_FORMAT.md  LICENSE  PARAMETER_ALIGNMENT.md  README.md  SECURITY.md  justfile  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test_debug_mode.py  test_parameters.py  test_run.py  test_time_levels.py
.github/: FUNDING.yaml  dependabot.yml  pull_request_template.md  release_drafter_template.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.yml  config.yml  docs_issue.yml  documentation.yml  feature-request.yml  feature_request.yml  help.yml  help_wanted.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: bug-fix-pr.md  bug-fix-pr.yml  config.yml  documentation-pr.md  documentation-pr.yml  feature-pr.md  feature-pr.yml  help-pr.yml  pull_request_template.md
.github/workflows/: DependencyInsights.yaml  docs.yml  docs_publish.yml  pypi_publish.yml  python-package.yaml  python_publish.yaml  release.yml  release_drafter.yml  testing.yml
bench/: benchmark_concurrency.py  benchmark_latency.py  benchmark_logging.py  benchmark_matrix.py
crates/color/: Cargo.toml
crates/compress/: Cargo.toml
crates/compress/src/: lib.rs
crates/concurrency/: Cargo.toml
crates/config/: Cargo.toml
crates/context/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/error/: Cargo.toml
crates/filter/: Cargo.toml
crates/format/: Cargo.toml
crates/levels/: Cargo.toml
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/record/: Cargo.toml
crates/rotate/: Cargo.toml
crates/schedule/: Cargo.toml
crates/sink/: Cargo.toml
crates/sink/src/: lib.rs
crates/source/: Cargo.toml
docs/: .gitignore  CNAME  changelog.md  comparison.md  getting-started.md  index.md  installation.md  package.json  quickstart.md
docs/.vitepress/: config.ts
docs/api-reference/: callbacks.md  complete-reference.md  configuration.md  context.md  error-types.md  exceptions.md  file-operations.md  index.md  integrations.md  logger.md  logging.md  models.md  search.md  sink-control.md  sink-management.md  utilities.md
docs/cookbook/: python-3.14-features.md
docs/css/: custom.css
docs/examples/: async-logging.md  auto-sink-levels.md  basic-console.md  basic-logging.md  color-callback.md  colored-logging.md  compression.md  concurrency.md  context-binding.md  custom-levels.md  django-integration.md  enable-disable.md  exception-handling.md  fastapi-integration.md  file-logging.md  file-operations.md  file-rotation.md  filtering.md  formatting.md  index.md  integrations.md  json-logging.md  jupyter-colab.md  lazy-evaluation.md  managing-sinks.md  multi-sink.md  multiple-sinks.md  patching.md  per-level-controls.md  production-config.md  rich-integration.md  rotation.md  stdlib-integration.md  template-strings.md
docs/guides/: async-sinks.md  callbacks.md  celery.md  color-markup.md  color-operations.md  compression-options.md  concurrency.md  configuration.md  configure.md  console-output.md  context-binding.md  custom-colors.md  custom-levels.md  development.md  django.md  environment-variables.md  error-handling.md  exception-callbacks.md  exception-handling.md  faq.md  fastapi.md  file-directories.md  file-logging.md  filter-features.md  filtering.md  flask.md  formatting.md  getting-started.md  gunicorn.md  independent-loggers.md  log-compact.md  logging-handlers.md  network-config.md  network-logging.md  parse.md  production-deployment.md  propagate.md  python-3.14-support.md  queue-async.md  rich-console.md  (+12 more)
docs/integrations/: apscheduler.md  aws_cloudwatch.md  azure_monitor.md  celery.md  click.md  datadog.md  discord.md  django.md  elasticsearch.md  email.md  fastapi.md  flask.md  google_cloud_logging.md  graylog.md  gunicorn.md  http.md  index.md  kafka.md  logstash.md  loki.md  mongodb.md  newrelic.md  opentelemetry.md  postgresql.md  prometheus.md  propagate.md  pydantic.md  redis.md  (+14 more)
examples/: README.md  apscheduler_integration.py  aws_cloudwatch_integration.py  azure_monitor_integration.py  basic_console.py  basic_logging.py  celery_integration.py  click_integration.py  color_callback.py  compat_example.py  compression.py  concurrency.py  context_binding.py  custom_levels.py  datadog_integration.py  discord_integration.py  django_integration.py  elasticsearch_integration.py  email_integration.py  enable_disable.py  exception_handling.py  fastapi_integration.py  file_logging.py  file_rotation.py  filtering.py  flask_integration.py  format_placeholders.py  formatting.py  google_cloud_logging_integration.py  graylog_integration.py  gunicorn_integration.py  http_integration.py  json_logging.py  kafka_integration.py  lazy_evaluation.py  logstash_integration.py  loki_integration.py  mongodb_integration.py  multiple_sinks.py  newrelic_integration.py  (+23 more)
logly/: __init__.py  __version__.py  _logly.pyi  exception.py  exceptions.py  log.txt  logger.py  logly.py  models.py  typing.py  version.py
src/: backend.rs  levels.rs  lib.rs  logger.rs  state.rs
tests/: log.txt  test_advanced_file_operations.py  test_async_newlines.py  test_async_sinks.py  test_auto_sink.py  test_auto_sink_levels.py  test_callable_format_filter.py  test_callbacks_and_templates.py  test_catch_exceptions.py  test_catch_exclude.py  test_color_callbacks.py  test_color_functions.py  test_color_output.py  test_compat.py  test_comprehensive.py  test_comprehensive_coverage.py  test_compression.py  test_concurrency_enqueue.py  test_configure.py  test_context_bind.py  test_copy.py  test_custom_levels.py  test_edge_cases.py  test_enable_disable.py  test_env_autoinit.py  test_error_messages.py  test_exception_hierarchy.py  test_exception_method.py  test_exception_methods.py  test_fail_level_and_colors.py  test_file_ops.py  test_filters.py  test_format_tokens.py  test_formatters.py  test_global_console_control.py  test_independent_loggers.py  test_integration_apscheduler.py  test_integration_aws_cloudwatch.py  test_integration_azure_monitor.py  test_integration_celery.py  (+75 more)
(+88 files in other folders)
