[package]
name = "logly"
version = "0.1.4"
description = "Blazingly Fast Rust-Powered Python Logging Utility with Advanced Features"
edition = "2024"
license = "MIT"
readme = "README.md"

[lib]
name = "_logly"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "ansi", "env-filter"] }
tracing-appender = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
parking_lot = "0.12.4"
crossbeam-channel = "0.5.15"
ahash = "0.8.12"
smallvec = "1.13"
flate2 = "1.1.2"
zstd = "0.13.3"
byte-unit = "5.1.6"
arc-swap = "1.7.1"
once_cell = "1.21.3"
regex = "1.11.1"

[features]
default = []

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
