[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "logly"
description = "A high-performance Rust-powered logging library for Python with structured logging, flexible sinks, and modern developer-friendly APIs."
authors = [
  { name = "muhammad-fiaz", email = "contact@muhammadfiaz.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "typing_extensions>=4.0; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "maturin>=1.14.1",
    "mypy[faster-cache]>=2.1.0",
    "prek>=0.4.5",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]

[project.optional-dependencies]
rich = [
    "rich>=14.2.0",
]
fastapi = [
    "fastapi>=0.115.0",
    "starlette>=0.41.0",
]
starlette = [
    "starlette>=0.41.0",
]
django = [
    "django>=4.2",
]
flask = [
    "flask>=3.0",
]
gunicorn = [
    "gunicorn>=21.0",
]
sqlalchemy = [
    "sqlalchemy>=2.0",
]
structlog = [
    "structlog>=24.0",
]
opentelemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
prometheus = [
    "prometheus-client>=0.20",
]
elasticsearch = [
    "elasticsearch>=8.0",
]
sentry = [
    "sentry-sdk>=2.0",
]
celery = [
    "celery>=5.0",
]
uvicorn = [
    "uvicorn>=0.20",
]
redis = [
    "redis>=4.0",
]
kafka = [
    "confluent-kafka>=2.0",
]
mongodb = [
    "pymongo>=4.0",
]
postgresql = [
    "psycopg2-binary>=2.9",
]
discord = [
    "aiohttp>=3.0",
]
slack = [
    "slack-sdk>=3.0",
]
apscheduler = [
    "apscheduler>=3.10",
]
rq = [
    "rq>=1.10",
]
click = [
    "click>=8.0",
]
typer = [
    "typer>=0.9",
]
all = [
    "rich>=14.2.0",
    "fastapi>=0.115.0",
    "starlette>=0.41.0",
    "django>=4.2",
    "flask>=3.0",
    "gunicorn>=21.0",
    "sqlalchemy>=2.0",
    "structlog>=24.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "prometheus-client>=0.20",
    "elasticsearch>=8.0",
    "sentry-sdk>=2.0",
    "celery>=5.0",
    "uvicorn>=0.20",
    "redis>=4.0",
    "confluent-kafka>=2.0",
    "pymongo>=4.0",
    "psycopg2-binary>=2.9",
    "aiohttp>=3.0",
    "slack-sdk>=3.0",
    "apscheduler>=3.10",
    "rq>=1.10",
    "click>=8.0",
    "typer>=0.9",
]

[tool.maturin]
module-name = "logly._logly"
binding = "pyo3"
features = ["pyo3/extension-module"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=logly --cov-report term-missing --no-cov-on-fail"

[tool.coverage.report]
exclude_lines = [
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "pragma: no cover",
]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "B",  # flake8-bugbear
  "W",  # Warning
  "F",  # pyflakes
  "UP",  # pyupgrade
  "I001",  # unsorted-imports
  "T201",  # print found
  "T203",  # pprint found
  "RUF022",  # Unsorted __all__
  "RUF023",  # Unforted __slots__
]
ignore=[
  # Recommended ignores by ruff when using formatter
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]
