[package]
name = "network"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
error.workspace = true
hostname.workspace = true
levels.workspace = true
record.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
