[package]
name = "sink"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
color.workspace = true
compress.workspace = true
concurrency.workspace = true
config.workspace = true
error.workspace = true
filter.workspace = true
format.workspace = true
levels.workspace = true
record.workspace = true
rotate.workspace = true
